@@ -42,6 +42,7 @@ check_PROGRAMS = \
         hwloc_get_obj_inside_cpuset \
         hwloc_get_shared_cache_covering_obj \
         hwloc_get_obj_below_array_by_type \
+        hwloc_get_obj_with_same_locality \
         hwloc_bitmap_first_last_weight \
         hwloc_bitmap_singlify \
         hwloc_type_depth \
